--- a/css/institute.css
+++ b/css/institute.css
@@ -4885,3 +4885,12 @@ html {
         background: rgba(59, 130, 246, 0.1);
     }
 }
+
+#adAnalyticsModal {
+    display: none;
+}
+
+#adAnalyticsModal.active,
+#adAnalyticsModal.show {
+    display: flex !important;
+}
